# ai-engineering-bootcamp

./: Makefile  docker-compose.yml  env.example  pyproject.toml
apps/api/: pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yaml  qna_agent.yaml  retrieval_generation.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon.dataset.ipynb  02-RAG-preprocessing_items.ipynb  03-RAG-pipeline-items.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
notebooks/week_3/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb  05-Tool-Calling-Exploration.ipynb
