[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "ipykernel>=7.2.0",
    "langsmith>=0.9.3",
    "nbconvert>=7.17.1",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=7.0.5",
    "instructor>=1.15.4",
    "langchain-community<0.4.0",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.2",
    "langsmith>=0.9.3",
    "matplotlib>=3.11.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
